build: upgrade qulice to 0.30.11
Checking the futures in the multi-threaded tests, as ErrorProne
demands, exposed a race in XMLDocument#asString: Saxon walks the DOM
without a lock. Printing is now synchronized on the node, the way
XPath evaluation already was.